--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <body>
-  <h1>Josi stinkt</h1>
+  <h1>JOSI STINKT</h1>
+  <h6> (nach Liebe)</h6>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
