--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Elisabeth Stagl</title>
+  <link rel="stylesheet" href="./css/esstylesheet.css">
 </head>
+
 <body>
-  <h1>JOSI STINKT</h1>
-  <h6> (nach Liebe)</h6>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <header class="navbar">
+    <nav class="container-navbar">
+        <div class="logo-container">
+          <a href="index.html" class="logo-link"><img class="logo" src="./files/elisabethstagl_2_-removebg-preview.png"
+              alt="elisabeth-stagl-logo"></a>
+        </div>
+        <div class="nav-container">
+          <ul>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="mailto:e.stagl@hotmail.com">Contact</a></li>
+          </ul>
+        </div>
+    </nav>
+  </header>
+  <div class="container aboutme">
+    <h1><span id="writing"></span><span class="cursor">|</span></h1>
+    <h4 class="aboutme">Junior Software Developer</h4>
+  </div>
+  
 </body>
+<script src="./javascript/writing.js"></script>
+
 </html>
